# dink_check

./: .env.example  .gitignore  README.md  install.sh  main.py  models.py  pyproject.toml  railpack.json  start.py
docs/: auth-refresh.md
scripts/: capture_dink_session.py
src/dink_check/: __main__.py  auth.py  main.py  models.py  refresh_cmd.py
tests/: test_auth.py  test_booking.py
tests/fixtures/: availabilities_2026-06-02.json  availabilities_venue_wrapped.json
