[project]
name = "dink-check"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
]

[project.scripts]
dink-check = "dink_check.main:main"

[build-system]
requires = ["uv_build>=0.11.17,<0.12"]
build-backend = "uv_build"

[tool.uv]
# Use uv-managed CPython; the local pyenv 3.12.9 build lacks the _blake2
# extension and emits "unsupported hash type blake2b/blake2s" errors.
python-preference = "only-managed"

[tool.ruff]
line-length = 88

[tool.ruff.format]
quote-style = "double"  # or "single"
indent-style = "space"
line-ending = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
